<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cerca"
        android:icon="@drawable/ic_search"
        app:iconTint="?attr/colorOnSurface"
        android:title="@string/hint_ricerca_spese"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_esporta"
        android:icon="@drawable/ic_file_download"
        android:title="@string/btn_esporta"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_codice_gruppo"
        android:icon="@drawable/ic_group"
        android:title="@string/action_codice_gruppo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_modifica_titolo"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_modifica_titolo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_personalizza_icona"
        android:icon="@drawable/ic_edit"
        android:title="Personalizza icona gruppo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lascia_scheda"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_lascia_scheda"
        app:showAsAction="never" />
</menu>
